# ggc-subtitle

./: .editorconfig  .gitignore  CLAUDE.md  README.md  T1.5-COMPLETED.md  TASKS.md  TASK_P5-T4.3_SUMMARY.md  ch_9100.json  ch_check.json  ch_final.json  ch_now.json  channels_test.json  docker-compose.yml  openapi_tmp.json  package-lock.json  package.json  railway-logs.md  vercel.json  vitest.config.ts  의회생중계 copy.html  의회생중계.html
.claude/: orchestrate-state.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  bills.py  channels.py  exports.py  meetings.py  search.py  subtitles.py  websocket.py
backend/app/core/: __init__.py  channels.py  config.py  database.py
backend/app/models/: __init__.py  meeting.py  subtitle.py
backend/app/schemas/: __init__.py  bill.py  meeting.py  subtitle.py
backend/app/services/: __init__.py  auto_stt.py  channel_status.py  channel_stt.py  deepgram_stt.py  dictionary.py  grammar_checker.py  history_tracker.py  hls_parser.py  kms_vod_resolver.py  pii_masking.py  speaker_utils.py  stream_processor.py  subtitle_corrector.py  summary_service.py  terminology_checker.py  transcript_export.py  verification_service.py  vod_processor.py  vod_stt_service.py  whisper.py
backend/app/tasks/: __init__.py  subtitle_generation.py
backend/migrations/: 001_initial.sql  002_adapt_existing_schema.sql  002_seed_data.sql  003_bills.sql  004_phase6a.sql  005_phase7.sql
backend/tests/: conftest.py  test_main.py
backend/tests/api/: __init__.py  test_bills.py  test_meetings.py  test_search.py  test_subtitles.py
backend/tests/services/: __init__.py  test_auto_stt.py  test_deepgram_stt.py  test_speaker_utils.py  test_stream_processor.py  test_summary_service.py  test_transcript_export.py  test_verification_service.py  test_vod_processor.py  test_vod_stt_service.py  test_whisper.py
backend/tests/websocket/: __init__.py  test_subtitle_ws.py
(+219 files in other folders)
